--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,3 +25,6 @@ steps:
     testResultsFiles: '**/output.xml'
     mergeTestResults: true
     testRunTitle: 'publish test results'
+- task: PublishAllureReport@1
+  inputs:
+    reportDir: '$(System.DefaultWorkingDirectory)/cypress/reports/'
