--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,4 +27,4 @@ steps:
     testRunTitle: 'publish test results'
 - task: PublishAllureReport@1
   inputs:
-    reportDir: '$(System.DefaultWorkingDirectory)/cypress/reports/'
+    reportDir: '$(AllureReportDirectory)/cypress/reports/'
