--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,4 +27,4 @@ steps:
     testRunTitle: 'publish test results'
 - task: PublishAllureReport@1
   inputs:
-    reportDir: '**/index.html'
+    reportDir: '$(System.DefaultWorkingDirectory)/cypress/reports/index.html'
