Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,7 @@ steps:
 - task: PublishAllureReport@1
   inputs:
     reportDir: '$(System.DefaultWorkingDirectory)/cypress/reports/index.html'
+- task: CmdLine@2
+  inputs:
+    script: 'ls'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/cypress/reports/'
