--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
     testRunTitle: 'publish test results'
 - task: PublishAllureReport@1
   inputs:
-    reportDir: '$(System.DefaultWorkingDirectory)/cypress/reports/'
+    reportDir: '$(System.DefaultWorkingDirectory)/cypress/reports'
 - task: CmdLine@2
   inputs:
     script: 'ls'
