--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,33 +3,46 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
+stages:
+- stage: Certificacion
+  jobs:
+  - job: FuncionalTest
+    steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '18.x'
+      displayName: 'Install Node.js'
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '18.x'
-  displayName: 'Install Node.js'
+    - script: |
+        npm install
+      displayName: 'npm install'
+      
+    - script: |
+        npx cypress run --spec cypress/e2e/features/* --env tags=@mobile
+      displayName: 'run e2e tests'
+      continueOnError: true
 
-- script: |
-    npm install
-  displayName: 'npm install'
-  
-- script: |
-    npx cypress run --spec cypress/e2e/features/* --env tags=@mobile
-  displayName: 'run e2e tests'
-  continueOnError: true
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: '**/output.xml'
+        mergeTestResults: true
+        testRunTitle: 'publish test results'
 
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: '**/output.xml'
-    mergeTestResults: true
-    testRunTitle: 'publish test results'
-- task: UploadPostmanHtmlReport@1
-  inputs:
-    cwd: '$(System.DefaultWorkingDirectory)/cypress/reports'
-    tabName: 'Reportes'
-- task: CmdLine@2
-  inputs:
-    script: 'ls'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/cypress/reports/'
+  - job: ApiTest
+    steps:
+    - script: |
+        npm install -g newman
+      workingDirectory: '$(System.DefaultWorkingDirectory)'
+      displayName: 'Npm install Newman'
+
+    - script: |
+        newman run Booking.postman_collection.json -v Booking.postman_environment reportes cli.junit --reporter-junit-export junit-report.xml
+      workingDirectory: '$(System.DefaultWorkingDirectory)/api-test/'
+      displayName: 'Run Postman'
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: $(System.DefaultWorkingDirectory)/api-test/report/junit-report.xml'
+        mergeTestResults: true
+        testRunTitle: 'publish test results'
