--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,17 @@
 name: Cypress Tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  cypress-run:
-    runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-22.04
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      # Install NPM dependencies, cache them correctlys
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v4.2.0 # use the explicit version number
-        with:
-          command: npm run cypress:execution
+      - uses: actions/checkout@v3
+      - name: Install Cypress
+        run: npm install cypress
+      - name: Run Cypress Tests
+        run: |
+          github-script -run main.js
