--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,21 @@
 name: Cypress Tests
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  test:
-    runs-on: ubuntu-22.04
+  cypress-run:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Install Cypress
-        run: npm install cypress
-      - name: Run Cypress Tests
-        run: |
-          github-script -run main.js
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install Cypress dependencies
+        run: npm install
+
+      - name: Run Cypress tests
+        run: npm run cypress:execution
